--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "ACMNet"]
 	path = ACMNet
 	url = https://github.com/shikishima-TasakiLab/ACMNet.git
+[submodule "deeplab_v3"]
+	path = deeplab_v3
+	url = https://github.com/shikishima-TasakiLab/deeplab_v3.git
